--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -10,207 +10,148 @@
 
   <body>
     <header>
-      <div class="fonte">
-        <h2>&#9885; Estrela do Viajante</h2>
-      </div>
+      <nav>
+        <h1>&#9885; Estrela do Viajante</h1>
+        <a href="#lugares">Lugares no Brasil</a>
+        <a href="#exterior">Lugares no exterior</a>
+        <a href="#epoca">Melhores epocas</a>
+      </nav>
     </header>
 
-    <nav>
-      <a href="#lugares">Lugares no Brasil</a>
-      <a href="#exterior">Lugares no exterior</a>
-      <a href="#epoca">Melhores epocas</a>
-    </nav>
-
-    <picture>
-      <source media="(max-width: 1000px)" srcset="img\2151700780 (1).jpg" />
-      <source media="(min-width: 1500px)" srcset="img/2151700780 (2).jpg" />
-      <source media="(min-width: 2000px)" srcset="img/2151700780.jpg" />
-      <img src="img/digital-art-dark-cosmic-night-sky.jpg" alt="" />
-    </picture>
-
     <main>
+      <picture>
+        <source media="(max-width: 1000px)" srcset="img\2151700780 (1).jpg" />
+        <source media="(min-width: 1500px)" srcset="img/2151700780 (2).jpg" />
+        <source media="(min-width: 2000px)" srcset="img/2151700780.jpg" />
+        <img src="img/digital-art-dark-cosmic-night-sky.jpg" alt="" />
+      </picture>
 
+      <section id="lugares">
+        <h1>&#10025; Melhores lugares no Brasil</h1>
 
-      <section id="lugares" class="float-left">
-        <h2>&#10025; Melhores lugares no Brasil</h2>
+        <table>
+          <tr>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="São Paulo"
+              />
+              <p>
+                <strong>São Paulo</strong> é uma cidade cheia de cultura e
+                gastronomia. Com museus renomados como o MASP e a Pinacoteca,
+                além de uma cena artística vibrante. A gastronomia é muito
+                variada, com pizza paulista e comida japonesa. São Paulo é um
+                destino imperdível, com eventos como a São Paulo Fashion Week e
+                a Parada do Orgulho LGBT.
+              </p>
+            </td>
 
-        <article>
-          <img src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp" alt="São Paulo"/>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="Rio de Janeiro"
+              />
+              <p>
+                O <strong>Rio de Janeiro</strong> é famoso por suas paisagens
+                naturais e praias como Copacabana e Ipanema. A cidade é o
+                coração do samba e do carnaval, com blocos de rua e festividades
+                durante o ano todo. O Rio também oferece opções culturais, como
+                o Museu do Amanhã e o Jardim Botânico.
+              </p>
+            </td>
 
-          <p>
-            <strong>São Paulo</strong> é uma cidade que se destaca pela diversidade cultural,
-            gastronômica e de entretenimento. Com museus renomados como o MASP e
-            a Pinacoteca, e uma cena artística vibrante, oferece experiências
-            únicas. A gastronomia é variada, com a famosa pizza paulista e
-            excelente comida japonesa, resultado da grande comunidade nipônica.
-            A cidade é um mosaico de culturas, com bairros como Liberdade, de
-            influência japonesa, e Bixiga, com herança italiana. São Paulo ainda
-            é sede de grandes eventos como a São Paulo Fashion Week e a Parada
-            do Orgulho LGBT, tornando-se um destino imperdível para quem busca
-            cultura e diversão.
-          </p>
-        </article>
-
-        <div class="clear"></div>
-
-        <article class="float-right">
-          <img src="img\3756139071-7503cdbe19-o.webp" alt="Rio de Janeiro"/>
-
-          <p>
-            O <strong>Rio de Janeiro</strong> é um dos destinos mais emblemáticos do Brasil,
-            conhecido por suas paisagens naturais deslumbrantes, como o Cristo
-            Redentor, o Pão de Açúcar e suas mundialmente famosas praias, como
-            Copacabana e Ipanema. A cidade é o coração do samba e do carnaval,
-            proporcionando uma energia única, com blocos de rua e festividades
-            durante o ano inteiro. Além dos pontos turísticos icônicos, o Rio
-            oferece opções culturais riquíssimas, como o Museu do Amanhã, o MAR
-            (Museu de Arte do Rio), e o Jardim Botânico, onde a natureza e a
-            arte se encontram.
-          </p>
-        </article>
-
-        <div class="clear"></div>
-
-        <article>
-          <img src="img\belohorizonte_2.jpg" alt="Belo Horizonte" />
-
-          <p>
-            <strong>Belo Horizonte</strong> é a cidade perfeita para quem deseja explorar a rica
-            cultura de Minas Gerais, conhecida pela acolhida calorosa de seus
-            habitantes e sua culinária única. A cidade é um verdadeiro paraíso
-            gastronômico, com pratos típicos como o pão de queijo, o feijão
-            tropeiro e a comida de boteco, que são servidos nos diversos bares e
-            restaurantes espalhados pela capital. O Mercado Central é um dos
-            lugares mais tradicionais da cidade, oferecendo produtos locais e
-            petiscos irresistíveis, sendo uma parada obrigatória para quem
-            visita a cidade.
-          </p>
-        </article>
-
-        <div class="clear"></div>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="Belo Horizonte"
+              />
+              <p>
+                <strong>Belo Horizonte</strong> é famosa por sua culinária
+                única, com pratos como pão de queijo e feijão tropeiro. A cidade
+                é um paraíso gastronômico, com bares e restaurantes
+                tradicionais. O Mercado Central é um lugar imperdível,
+                oferecendo produtos locais e petiscos irresistíveis.
+              </p>
+            </td>
+          </tr>
+        </table>
 
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
-      <div class="clear"></div>
+      <section id="exterior">
+        <h1>&#10025; Melhores lugares no mundo</h1>
 
-      <section id="exterior" class="float-right">
-        <h2>&#10025; Melhores Lugares no Exterior</h2>
+        <table>
+          <tr>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="Paris"
+              />
+              <p>
+                <strong>Paris</strong> é conhecida por sua arquitetura icônica,
+                como a Torre Eiffel e o Arco do Triunfo. Além disso, a cidade
+                possui museus renomados como o Louvre e o Musée d'Orsay, sendo
+                um destino cultural imperdível. Paris também é famosa por sua
+                gastronomia e pela atmosfera romântica que encanta seus
+                visitantes.
+              </p>
+            </td>
 
-        <article>
-          <img src="img\comedie-tour-eiffel.jpg" alt="Paris" />
-          <p>
-            <strong>Paris </strong>é uma das cidades mais visitadas do mundo e é famosa por sua
-            arquitetura icônica, como a Torre Eiffel, o Arco do Triunfo e a
-            Catedral de Notre-Dame. Além disso, a cidade oferece uma rica cena
-            cultural, com museus renomados como o Louvre e o Musée d'Orsay.
-            Paris é ideal para quem aprecia arte, gastronomia e uma atmosfera
-            romântica.
-          </p>
-          <p>
-            Não deixe de caminhar pelas charmosas ruas de Montmartre, visitar o
-            bairro de Le Marais e experimentar as delícias da pâtisserie
-            francesa.
-          </p>
-    
-        </article>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="Tóquio"
+              />
+              <p>
+                <strong>Tóquio</strong> mistura tradição e modernidade. A cidade
+                tem templos como o Senso-ji, mas também oferece bairros
+                futuristas como Shibuya. Tóquio é famosa por sua culinária, como
+                sushi e ramen, e tem excelentes opções de entretenimento e
+                compras.
+              </p>
+            </td>
 
-        <div class="clear"></div>
-        <article class="float-left">
-          <img src="img\filters_format(webp).webp" alt="Tóquio" />
-          <p>
-            ><strong>Tóquio</strong> é uma cidade vibrante que mistura tradição e modernidade de
-            maneira única. Você pode explorar templos históricos como o Senso-ji
-            em Asakusa, enquanto também visita bairros futuristas como Shibuya e
-            Shinjuku, onde as luzes neon dominam a paisagem. Tóquio também é
-            famosa pela culinária, especialmente sushi e ramen, além de ser um
-            ótimo destino para compras e entretenimento.
-          </p>
-          <p>
-            Não perca a chance de visitar o bairro de Akihabara, o paraíso dos
-            eletrônicos e da cultura pop japonesa, e experimentar a famosa
-            cultura de cafés temáticos e lojas de anime.
-          </p>
-        </article>
-        <div class="clear"></div>
-
-        <article>
-          <img src="img\New-York-Helicopter-Tour-2.eric_both.bottom_right.jpg.webp" alt="Nova York" />
-          <p>
-            <strong>Nova York</strong> é uma cidade dinâmica e diversa, com algo para todos.
-            Conhecida como a "cidade que nunca dorme", oferece atrações icônicas
-            como a Estátua da Liberdade, o Central Park e a Times Square. Além
-            disso, você pode desfrutar de uma das cenas artísticas mais
-            impressionantes do mundo, com a Broadway, o Museu de Arte Moderna e
-            outros locais culturais renomados.
-          </p>
-          <p>
-            Para uma experiência única, passeie por bairros como Brooklyn e
-            SoHo, e explore a culinária diversificada, desde comida de rua até
-            restaurantes estrelados.
-          </p>
-        </article>
-
-        <div class="clear"></div>
+            <td>
+              <img
+                src="img\09f6c604-fa70-401a-9257-89fcf38e07fb.webp"
+                alt="Nova York"
+              />
+              <p>
+                <strong>Nova York</strong> é uma cidade vibrante com atrações
+                icônicas como a Estátua da Liberdade e o Central Park. Também
+                oferece uma cena artística única, com a Broadway e o Museu de
+                Arte Moderna. Para quem busca diversão, a Times Square é o lugar
+                certo.
+              </p>
+            </td>
+          </tr>
+        </table>
 
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
-
 
       <section id="epoca">
-        <h2>&#10025; Melhores Épocas para Viajar</h2>
+        <h1>&#10025; Melhores Épocas para Viajar</h1>
 
         <article>
-
           <p>
-            Caso você esteja pensando em viajar para aproveitar uma época
-            quente, sugerimos que considere os meses entre Janeiro e Maio.
-            Durante esse período, você pode explorar praias paradisíacas ou
-            destinos refrescantes, ideais para quem quer fugir do frio e relaxar
-            ao sol.
-          </p>
-
-          <p>
-            Se você é fã de temperaturas mais amenas, os meses de Setembro a
-            Novembro são perfeitos. É a época em que muitos destinos ao redor do
-            mundo começam a se preparar para a alta temporada, oferecendo
-            atividades culturais, festivais e atrações turísticas com menos
-            turistas, o que proporciona uma experiência mais tranquila.
-          </p>
-
-          <p>
-            Para aqueles que preferem o clima mais frio, os meses de Junho a
-            Agosto são ideais para explorar regiões de montanha, como as Alpes
-            ou até destinos tropicais que oferecem um clima mais fresco durante
-            o verão. Durante essa temporada, você pode aproveitar atividades
-            como esqui, snowboard ou até trilhas nas montanhas, que ficam ainda
-            mais impressionantes com o charme da neve.
-          </p>
-
-          <p>
-            Além do clima, também é importante considerar eventos e festivais
-            que acontecem em determinadas épocas do ano. Por exemplo, se você
-            quer vivenciar o Carnaval no Brasil, a melhor época para visitar é
-            entre Fevereiro e Março. Já se o seu objetivo é participar de festas
-            tradicionais na Europa, como a Oktoberfest na Alemanha, os meses de
-            Setembro e Outubro são perfeitos.
-          </p>
-
-          <p>
-            Em qualquer época do ano, lembre-se de verificar as condições
-            climáticas locais, o que pode impactar a disponibilidade de algumas
-            atividades turísticas. Também vale a pena planejar o que levar de
-            acordo com a estação, para garantir o máximo de conforto durante a
-            viagem.
+            Para aproveitar um clima quente, considere viajar entre Janeiro e
+            Maio, ideal para praias e destinos refrescantes. Se prefere
+            temperaturas amenas, os meses de Setembro a Novembro são perfeitos,
+            com menos turistas e muitas atividades culturais. Para quem gosta de
+            clima frio, os meses de Junho a Agosto são ótimos para explorar
+            regiões montanhosas e praticar esqui ou snowboard. Além disso,
+            eventos como o Carnaval no Brasil (Fevereiro a Março) e a
+            Oktoberfest na Alemanha (Setembro e Outubro) são oportunidades
+            imperdíveis. Lembre-se de verificar as condições climáticas e
+            planejar o que levar para garantir conforto durante a viagem.
           </p>
         </article>
 
-        <div class="clear"></div>
-
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
-
-
     </main>
 
     <footer>
