--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -10,8 +10,11 @@
 
   <body>
     <header>
+      <figure id="logo">
+        <img src="img\moon.png" />
+      </figure>
       <nav>
-        <h1>&#9885; Estrela do Viajante</h1>
+        <h1>Estrela do Viajante</h1>
         <a href="#lugares">Lugares no Brasil</a>
         <a href="#exterior">Lugares no exterior</a>
         <a href="#epoca">Melhores epocas</a>
@@ -23,7 +26,7 @@
         <source media="(max-width: 1000px)" srcset="img\2151700780 (1).jpg" />
         <source media="(min-width: 1500px)" srcset="img/2151700780 (2).jpg" />
         <source media="(min-width: 2000px)" srcset="img/2151700780.jpg" />
-        <img src="img/digital-art-dark-cosmic-night-sky.jpg" alt="" />
+        <img src="img/digital-art-dark-cosmic-night-sky.jpg" alt="capa" />
       </picture>
 
       <section id="lugares">
