--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -18,6 +18,7 @@
         <a href="#lugares">Lugares no Brasil</a>
         <a href="#exterior">Lugares no exterior</a>
         <a href="#epoca">Melhores epocas</a>
+        <a href="#info">Sobre Nós</a>
       </nav>
     </header>
 
@@ -30,6 +31,7 @@
       </picture>
 
       <section id="lugares">
+        <img src="img\stars (3).png" id="img-separadora">
         <h1>&#10025; Melhores lugares no Brasil</h1>
 
         <table>
@@ -83,6 +85,7 @@
       </section>
 
       <section id="exterior">
+        <img src="img\stars (3).png" id="img-separadora">
         <h1>&#10025; Melhores lugares no mundo</h1>
 
         <table>
@@ -135,26 +138,69 @@
         <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
 
-      <section id="epoca">
-        <h1>&#10025; Melhores Épocas para Viajar</h1>
+      <img src="img\stars (3).png" id="img-separadora">
 
-        <article>
-          <p>
-            Para aproveitar um clima quente, considere viajar entre Janeiro e
-            Maio, ideal para praias e destinos refrescantes. Se prefere
-            temperaturas amenas, os meses de Setembro a Novembro são perfeitos,
-            com menos turistas e muitas atividades culturais. Para quem gosta de
-            clima frio, os meses de Junho a Agosto são ótimos para explorar
-            regiões montanhosas e praticar esqui ou snowboard. Além disso,
-            eventos como o Carnaval no Brasil (Fevereiro a Março) e a
-            Oktoberfest na Alemanha (Setembro e Outubro) são oportunidades
-            imperdíveis. Lembre-se de verificar as condições climáticas e
-            planejar o que levar para garantir conforto durante a viagem.
-          </p>
+      <section id="epoca">
+       
+        <h1>&#10025; Melhores Épocas para Viajar</h1>
+        
+        <article id="img-epoca">
+
+          <table>
+            <tr>
+              <td>
+                <img src="img\46990.jpg" class="img-topo" />
+
+                <p>
+                  A primavera em várias partes do mundo, essa época é celebrada
+                  com festivais que destacam a beleza da natureza e a alegria da
+                  vida.
+                </p>
+              </td>
+              <td>
+                <img src="img\49124.jpg" class="img-topo" />
+
+                <p>
+                  Para aproveitar um clima quente, considere viajar entre
+                  Janeiro e Maio, ideal para praias e destinos refrescantes.
+                </p>
+              </td>
+              <td>
+                <img src="img\3973.jpg" class="img-topo" />
+
+                <p>
+                  E se o objetivo é descansar, nada melhor que lugares mais
+                  isolados, em meio à natureza, cidades pequenas e a vida
+                  passando mais devagar no Outono.
+                </p>
+              </td>
+              <td>
+                <img src="img\98.jpg" class="img-topo" />
+
+                <p>
+                  Para quem gosta de clima frio, os meses de Junho a Agosto são
+                  ótimos para explorar regiões montanhosas e praticar esqui ou
+                  snowboard
+                </p>
+              </td>
+            </tr>
+          </table>
+
+
+          <article>
+            <p>&#8594;
+              Lembre-se de verificar as condições climáticas e planejar o que
+              levar para garantir conforto durante a viagem.
+            </p>
+            <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
+          </article>
+
         </article>
 
-        <h2><a class="voltar-inicio" href="#">Voltar ao topo</a></h2>
       </section>
+
+      <section id=""></section>
+
     </main>
 
     <footer>
