--- a/atividades/atividade002-landing-page/index.html
+++ b/atividades/atividade002-landing-page/index.html
@@ -17,7 +17,6 @@
         <a href="#lugares">Lugares no Brasil</a>
         <a href="#exterior">Lugares no exterior</a>
         <a href="#epoca">Melhores epocas</a>
-        <a href="#info">Sobre Nós</a>
       </nav>
     </header>
 
@@ -85,7 +84,7 @@
 
       <section id="exterior">
         <img src="img\stars (3).png" id="img-separadora">
-        <h1>&#10025; Melhores lugares no mundo</h1>
+        <h1>&#10025; Melhores lugares no Exterior</h1>
 
         <table>
           <tr>
