--- a/atividades/atividade003/portifolio.html
+++ b/atividades/atividade003/portifolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, iniial-scale=1.0" />
-    <title>Home</title>
+    <title>Portifolio</title>
     <link rel="stylesheet" href="css/estilo.css" />
   </head>
 
