Atividade - Sobre nos completo

--- a/atividades/atividade003/sobre.html
+++ b/atividades/atividade003/sobre.html
@@ -22,8 +22,57 @@
         </nav>
       </header>
 
-    <main>
+    <main class="img-fundo">
+      <section >
+        <article>
+          <table>
 
+              <caption>
+                  <h2>Sobre Nos</h2>
+              </caption>
+  
+              <thead>
+                  <tr>
+                      <th></th>
+                      <th></th>
+                  </tr>
+              </thead>
+  
+              <tbody>
+                  <tr>
+                      <td><img src="img\2150799677.jpg" class="img-table"></td>
+                      <td>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the <i>industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled</i> it to make a type
+                        specimen book. <u>It has survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essentially unchanged.</u> It was popularised in
+                        the 1960s with the release of Letraset sheets containing <b>Lorem Ipsum</b> passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including
+                        versions of Lorem Ipsum.
+                      </p>
+                      </td>
+                  </tr>
+  
+                  <tr>
+                      <td><img src="img\2150799681.jpg" class="img-table"></td>
+                      <td>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the <i>industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and scrambled</i> it to make a type
+                        specimen book. <u>It has survived not only five centuries, but also the leap into
+                            electronic typesetting, remaining essentially unchanged.</u> It was popularised in
+                        the 1960s with the release of Letraset sheets containing <b>Lorem Ipsum</b> passages,
+                        and more recently with desktop publishing software like Aldus PageMaker including
+                        versions of Lorem Ipsum.</p>
+                      </td>
+                  </tr>
+  
+              </tbody>
+  
+          </table>
+        </article>
+      </section>
 
     </main>
 
