Atividade - Portifolio pronto

--- a/atividades/atividade003/portifolio.html
+++ b/atividades/atividade003/portifolio.html
@@ -21,7 +21,41 @@
       </nav>
     </header>
 
-    <main>
+    <main class="img-fundo">
+
+      <section>
+
+      </section>
+
+      <section>
+
+        <table>
+
+          <caption>
+            <h2>Projetos Realizados</h2>
+        </caption>
+
+          <tbody>
+
+            <tr>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+            </tr>
+
+            <tr>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+            </tr>
+
+          </tbody>
+
+        </table>
+
+      </section>
       
     </main>
 
