--- a/atividades/atividade003/home.html
+++ b/atividades/atividade003/home.html
@@ -2,32 +2,30 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, iniial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="css/estilo.css" />
   </head>
 
   <body>
     <header class="sombra-blur">
-      <h2>I-Desing</h2>
+      <h2>I-Design</h2>
     </header>
     <header class="sombra-blur">
       <nav>
         <a href="home.html">Home</a>
         <a href="sobre.html">Sobre</a>
-        <a href="portifolio.html">Portifolio</a>
+        <a href="portifolio.html">Portfólio</a>
         <a href="clientes.html">Clientes</a>
         <a href="contato.html">Contato</a>
       </nav>
     </header>
 
     <main class="img-fundo">
-
       <section>
         <table>
-
           <caption>
-            <h2>Bem-Vindo</h2>
+            <h2>Bem-Vindo à I-Design</h2>
           </caption>
 
           <tbody>
@@ -35,22 +33,9 @@
               <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" class="img-table"></td>
               <td>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the
-                  <i
-                    >industry's standard dummy text ever since the 1500s, when
-                    an unknown printer took a galley of type and scrambled</i
-                  >
-                  it to make a type specimen book.
-                  <u
-                    >It has survived not only five centuries, but also the leap
-                    into electronic typesetting, remaining essentially
-                    unchanged.</u
-                  >
-                  It was popularised in the 1960s with the release of Letraset
-                  sheets containing <b>Lorem Ipsum</b> passages, and more
-                  recently with desktop publishing software like Aldus PageMaker
-                  including versions of Lorem Ipsum.
+                  Na I-Design, somos apaixonados por criar espaços que inspiram e conectam. Trabalhamos com projetos arquitetônicos inovadores e soluções que atendem às necessidades de nossos clientes. Nossa equipe é formada por profissionais qualificados que buscam excelência em cada detalhe, criando ambientes funcionais e esteticamente incríveis.
+                  <u>Com um design clean e moderno, transformamos espaços, tornando-os mais eficientes e bonitos.</u>
+                  Trabalhamos com diversos tipos de projetos, desde residenciais até comerciais, sempre com foco na qualidade e na sustentabilidade. Nosso objetivo é criar experiências únicas por meio do design arquitetônico.
                 </p>
               </td>
             </tr>
@@ -58,33 +43,18 @@
               <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" class="img-table"></td>
               <td>
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the
-                  <i
-                    >industry's standard dummy text ever since the 1500s, when
-                    an unknown printer took a galley of type and scrambled</i
-                  >
-                  it to make a type specimen book.
-                  <u
-                    >It has survived not only five centuries, but also the leap
-                    into electronic typesetting, remaining essentially
-                    unchanged.</u
-                  >
-                  It was popularised in the 1960s with the release of Letraset
-                  sheets containing <b>Lorem Ipsum</b> passages, and more
-                  recently with desktop publishing software like Aldus PageMaker
-                  including versions of Lorem Ipsum.
+                  Ao longo dos anos, a I-Design tem se destacado por sua abordagem criativa e funcional, sempre incorporando tendências do mercado e as melhores práticas de sustentabilidade. Nossa missão é ajudar você a visualizar e transformar seus sonhos arquitetônicos em realidade.
+                  <u>Acreditamos que cada projeto é uma oportunidade de impactar positivamente a vida das pessoas, criando ambientes mais conectados e humanizados.</u>
                 </p>
               </td>
             </tr>
           </tbody>
         </table>
       </section>
-
     </main>
 
     <footer>
-      <p>&copy; 2025 I-Desing Todos os direitos reservados.</p>
+      <p>&copy; 2025 I-Design. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
