--- a/atividades/atividade003/sobre.html
+++ b/atividades/atividade003/sobre.html
@@ -2,74 +2,58 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, iniial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre</title>
     <link rel="stylesheet" href="css/estilo.css" />
   </head>
 
-  <bordy>
-
+  <body>
     <header class="sombra-blur">
-        <h2>I-Desing</h2>
-      </header>
-      <header class="sombra-blur">
-        <nav>
-          <a href="home.html">Home</a>
-          <a href="sobre.html">Sobre</a>
-          <a href="portifolio.html">Portifolio</a>
-          <a href="clientes.html">Clientes</a>
-          <a href="contato.html">Contato</a>
-        </nav>
-      </header>
+      <h2>I-Design</h2>
+    </header>
+    <header class="sombra-blur">
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="portifolio.html">Portfólio</a>
+        <a href="clientes.html">Clientes</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+    </header>
 
     <main class="img-fundo">
-      <section >
-          <table>
+      <section>
+        <table>
+          <caption>
+            <h2>Sobre a I-Design</h2>
+          </caption>
 
-              <caption>
-                  <h2>Sobre Nos</h2>
-              </caption>
-    
-              <tbody>
-                  <tr>
-                      <td><img src="img\2150799677.jpg" class="img-table"></td>
-                      <td>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the <i>industry's standard dummy text ever since the 1500s,
-                            when an unknown printer took a galley of type and scrambled</i> it to make a type
-                        specimen book. <u>It has survived not only five centuries, but also the leap into
-                            electronic typesetting, remaining essentially unchanged.</u> It was popularised in
-                        the 1960s with the release of Letraset sheets containing <b>Lorem Ipsum</b> passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including
-                        versions of Lorem Ipsum.
-                      </p>
-                      </td>
-                  </tr>
-  
-                  <tr>
-                      <td><img src="img\2150799681.jpg" class="img-table"></td>
-                      <td>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the <i>industry's standard dummy text ever since the 1500s,
-                            when an unknown printer took a galley of type and scrambled</i> it to make a type
-                        specimen book. <u>It has survived not only five centuries, but also the leap into
-                            electronic typesetting, remaining essentially unchanged.</u> It was popularised in
-                        the 1960s with the release of Letraset sheets containing <b>Lorem Ipsum</b> passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including
-                        versions of Lorem Ipsum.</p>
-                      </td>
-                  </tr>
-  
-              </tbody>
-  
-          </table>
+          <tbody>
+            <tr>
+              <td><img src="img\2150799677.jpg" class="img-table"></td>
+              <td>
+                <p>
+                  A I-Design nasceu com a missão de transformar espaços por meio da arquitetura e do design. Com mais de 30 anos de experiência no mercado, nossa equipe é especializada em criar projetos que aliam estética, funcionalidade e inovação. Acreditamos que o design de interiores e a arquitetura devem ser soluções que tragam valor ao cotidiano das pessoas e ao meio ambiente.
+                  <u>Temos como compromisso a excelência e a sustentabilidade em todos os nossos projetos.</u> Nossa abordagem é centrada no cliente, buscando entender suas necessidades e traduzindo suas ideias em projetos personalizados.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td><img src="img\2150799681.jpg" class="img-table"></td>
+              <td>
+                <p>
+                  Trabalhamos com uma ampla gama de projetos, que incluem residenciais, comerciais e corporativos, sempre buscando soluções criativas e sustentáveis. Cada projeto é único e é desenvolvido de acordo com as especificidades de cada cliente, respeitando sua identidade e seus valores.
+                  <u>Nosso objetivo é proporcionar uma experiência única e inesquecível, criando espaços que inspirem e melhorem a qualidade de vida.</u>
+                </p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </section>
-
     </main>
 
     <footer>
-        <p>&copy; 2025 I-Desing Todos os direitos reservados.</p>
+      <p>&copy; 2025 I-Design. Todos os direitos reservados.</p>
     </footer>
-
-  </bordy>
+  </body>
 </html>
