--- a/atividades/atividade003/clientes.html
+++ b/atividades/atividade003/clientes.html
@@ -24,13 +24,13 @@
 
     <main class="img-fundo">
       <section>
-        
+
         <table>
 
-        <caption>
-          <h2>Clientes Satisfeitos</h2>
+          <caption>
+            <h2>Clientes Satisfeitos</h2>
 
-        </caption>
+          </caption>
 
           <thead>
             <tr>
@@ -44,26 +44,31 @@
               <td>&#9733; &#9733; &#9733; &#9733; &#9734;</td>
               <td> <img src="img\15652.jpg" class="icone-cliente">
                 <p>"Excelente atendimento e dedicação! A I-Design transformou a nossa ideia em um projeto incrível. Super recomendados!"</p></td>
-              <td><img src="img\2150799677.jpg" alt="Projeto A" class="img-table" /></td>
+              <td><img src="img\2150799677.jpg" alt="Projeto A"
+                  class="img-table" /></td>
             </tr>
             <tr>
               <td>&#9733; &#9733; &#9733; &#9733; &#9733;</td>
               <td> <img src="img\16799.jpg" class="icone-cliente">
                 <p>"A equipe da I-Design superou todas as nossas expectativas! O projeto ficou perfeito, atendeu a todas as nossas necessidades."</p></td>
-              <td><img src="img\2150906222.jpg" alt="Projeto B" class="img-table" /></td>
+              <td><img src="img\2150906222.jpg" alt="Projeto B"
+                  class="img-table" /></td>
             </tr>
             <tr>
-              <td>&#9733; &#9733; &#9733;  &#9734; &#9734;</td>
+              <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
               <td><img src="img\27923.jpg" class="icone-cliente">
-                <p>"Ficamos muito felizes com o resultado do nosso projeto! A I-Design captou perfeitamente nossas ideias e entregou no prazo."</p> </td>
-              <td><img src="img\2150799681.jpg" alt="Projeto C" class="img-table" /></td>
+                <p>"Ficamos muito felizes com o resultado do nosso projeto! A I-Design captou perfeitamente nossas ideias e entregou no prazo."</p>
+              </td>
+              <td><img src="img\2150799681.jpg" alt="Projeto C"
+                  class="img-table" /></td>
             </tr>
 
             <tr>
-              <td>&#9733; &#9733; &#9733;  &#9734; &#9734;</td>
+              <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
               <td><img src="img\27685.jpg" class="icone-cliente">
                 <p>"O trabalho foi bom, mas houve alguns detalhes que não atendiam completamente o que esperávamos. Ainda assim, ficamos satisfeitos."</p></td>
-              <td><img src="img\14217.jpg" alt="Projeto C" class="img-table" /></td>
+              <td><img src="img\14217.jpg" alt="Projeto C"
+                  class="img-table" /></td>
             </tr>
           </tbody>
         </table>
