--- a/atividades/atividade003/contato.html
+++ b/atividades/atividade003/contato.html
@@ -45,7 +45,8 @@
 
           <div>
             <label for="mensagem">Previa sobre o projeto:</label>
-            <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+            <textarea id="mensagem" name="mensagem" rows="4"
+              required></textarea>
           </div>
 
           <div>
