--- a/atividades/atividade003/home.html
+++ b/atividades/atividade003/home.html
@@ -30,21 +30,38 @@
 
           <tbody>
             <tr>
-              <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" class="img-table"></td>
+              <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp"
+                  class="img-table"></td>
               <td>
                 <p>
-                  Na I-Design, somos apaixonados por criar espaços que inspiram e conectam. Trabalhamos com projetos arquitetônicos inovadores e soluções que atendem às necessidades de nossos clientes. Nossa equipe é formada por profissionais qualificados que buscam excelência em cada detalhe, criando ambientes funcionais e esteticamente incríveis.
-                  <u>Com um design clean e moderno, transformamos espaços, tornando-os mais eficientes e bonitos.</u>
-                  Trabalhamos com diversos tipos de projetos, desde residenciais até comerciais, sempre com foco na qualidade e na sustentabilidade. Nosso objetivo é criar experiências únicas por meio do design arquitetônico.
+                  Na I-Design, somos apaixonados por criar espaços que inspiram
+                  e conectam. Trabalhamos com projetos arquitetônicos inovadores
+                  e soluções que atendem às necessidades de nossos clientes.
+                  Nossa equipe é formada por profissionais qualificados que
+                  buscam excelência em cada detalhe, criando ambientes
+                  funcionais e esteticamente incríveis.
+                  <u>Com um design clean e moderno, transformamos espaços,
+                    tornando-os mais eficientes e bonitos.</u>
+                  Trabalhamos com diversos tipos de projetos, desde residenciais
+                  até comerciais, sempre com foco na qualidade e na
+                  sustentabilidade. Nosso objetivo é criar experiências únicas
+                  por meio do design arquitetônico.
                 </p>
               </td>
             </tr>
             <tr>
-              <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" class="img-table"></td>
+              <td><img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp"
+                  class="img-table"></td>
               <td>
                 <p>
-                  Ao longo dos anos, a I-Design tem se destacado por sua abordagem criativa e funcional, sempre incorporando tendências do mercado e as melhores práticas de sustentabilidade. Nossa missão é ajudar você a visualizar e transformar seus sonhos arquitetônicos em realidade.
-                  <u>Acreditamos que cada projeto é uma oportunidade de impactar positivamente a vida das pessoas, criando ambientes mais conectados e humanizados.</u>
+                  Ao longo dos anos, a I-Design tem se destacado por sua
+                  abordagem criativa e funcional, sempre incorporando tendências
+                  do mercado e as melhores práticas de sustentabilidade. Nossa
+                  missão é ajudar você a visualizar e transformar seus sonhos
+                  arquitetônicos em realidade.
+                  <u>Acreditamos que cada projeto é uma oportunidade de impactar
+                    positivamente a vida das pessoas, criando ambientes mais
+                    conectados e humanizados.</u>
                 </p>
               </td>
             </tr>
