--- a/atividades/atividade003/sobre.html
+++ b/atividades/atividade003/sobre.html
@@ -33,8 +33,16 @@
               <td><img src="img\2150799677.jpg" class="img-table"></td>
               <td>
                 <p>
-                  A I-Design nasceu com a missão de transformar espaços por meio da arquitetura e do design. Com mais de 30 anos de experiência no mercado, nossa equipe é especializada em criar projetos que aliam estética, funcionalidade e inovação. Acreditamos que o design de interiores e a arquitetura devem ser soluções que tragam valor ao cotidiano das pessoas e ao meio ambiente.
-                  <u>Temos como compromisso a excelência e a sustentabilidade em todos os nossos projetos.</u> Nossa abordagem é centrada no cliente, buscando entender suas necessidades e traduzindo suas ideias em projetos personalizados.
+                  A I-Design nasceu com a missão de transformar espaços por meio
+                  da arquitetura e do design. Com mais de 30 anos de experiência
+                  no mercado, nossa equipe é especializada em criar projetos que
+                  aliam estética, funcionalidade e inovação. Acreditamos que o
+                  design de interiores e a arquitetura devem ser soluções que
+                  tragam valor ao cotidiano das pessoas e ao meio ambiente.
+                  <u>Temos como compromisso a excelência e a sustentabilidade em
+                    todos os nossos projetos.</u> Nossa abordagem é centrada no
+                  cliente, buscando entender suas necessidades e traduzindo suas
+                  ideias em projetos personalizados.
                 </p>
               </td>
             </tr>
@@ -42,8 +50,14 @@
               <td><img src="img\2150799681.jpg" class="img-table"></td>
               <td>
                 <p>
-                  Trabalhamos com uma ampla gama de projetos, que incluem residenciais, comerciais e corporativos, sempre buscando soluções criativas e sustentáveis. Cada projeto é único e é desenvolvido de acordo com as especificidades de cada cliente, respeitando sua identidade e seus valores.
-                  <u>Nosso objetivo é proporcionar uma experiência única e inesquecível, criando espaços que inspirem e melhorem a qualidade de vida.</u>
+                  Trabalhamos com uma ampla gama de projetos, que incluem
+                  residenciais, comerciais e corporativos, sempre buscando
+                  soluções criativas e sustentáveis. Cada projeto é único e é
+                  desenvolvido de acordo com as especificidades de cada cliente,
+                  respeitando sua identidade e seus valores.
+                  <u>Nosso objetivo é proporcionar uma experiência única e
+                    inesquecível, criando espaços que inspirem e melhorem a
+                    qualidade de vida.</u>
                 </p>
               </td>
             </tr>
