--- a/atividades/atividade003/portifolio.html
+++ b/atividades/atividade003/portifolio.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="sombra-blur">
-      <h2>I-Desing</h2>
+      <h2>I-Design</h2>
     </header>
     <header class="sombra-blur">
       <nav>
